--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -19,7 +19,9 @@
                     <a href="{% url 'encyclopedia:index' %}">Home</a>
                 </div>
                 <div>
-                    Create New Page
+                    <a href="{%  url 'encyclopedia:newPage'  %}">
+                        Create New Page
+                    </a>
                 </div>
                 <div>
                     Random Page
